<resources>
    <string name="app_name">Diidxa</string>
    <!--........... Seccion SplashScreen ...........-->
    <string name="splash_app">DIIDXA</string>
    <string name="splash_autor">TecNM</string>
    <string name="splash_autor_completo">Tecnológico Nacional de México</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_main_es">MainActivityEs</string>
    <string name="title_activity_main_za">MainActivityZa</string>

    <!--........... Seccion Comprobar ErroresEs ...........-->
    <string name="alertT">TITULO</string>
    <string name="alertD">DESCRIPCION</string>
    <string name="alertB">Aceptar</string>
    <string name="adesc">Adesc</string>

    <!--........... ESPAÑOL...........-->
    <string name="tab_Dic">DICCIONARIO</string>
    <string name="tab_Bus">BUSQUEDA</string>

    <!-- TODO: Menu Español -->
    <string name="action_menu_zapoteco">Zapoteco</string>
    <string name="action_menu_español">Español</string>
    <string name="action_menu_AcercaDe">Acerca de</string>
    <string name="action_menu_salir">Salir</string>


    <!-- TODO: Fragment Busqueda -->
    <string name="ETTextEspañol">Escribe una palabra</string>
    <string name="BTNTextEspañolPlay">Escuchar</string>
    <string name="BTNTextEspañolSearch">Buscar</string>
    <string name="suges">Quizá esto es lo que buscaba.</string>
    <string name="mjs_sugges">Por el momento la palabra que busca no está disponible, puede sugerirla presionando el siguiente botón</string>
    <string name="btnsuges">Sugerir</string>

    <!-- TODO: Desing Item Busqueda Español-->
    <string name="PlaySonEsp">Escuchar pronunciación</string>
    <string name="PlayEjEsp">Escuchar Ejemplo</string>
    <!-- TODO: Desing Item Acerca de -->

    <string name="Acer_Desc_Es">Esta aplicación fue desarrollada por estudiantes del Instituto Tecnológico del Istmo, agradecemos al profesor Homelino Toledo Cortes y al profesor Aurelio Toledo Matus por su orientación y su ayuda en el desarrollo de este proyecto, de la misma forma, expresamos nuestro sincero agradecimiento al Ingeniero Jorge Márquez Juárez por todo el apoyo brindado al proyecto y por confiar en nosotros para su realización.
        \n\nSi deseas participar, informar de algún error, sugerencia o comentario, por favor envía un correo a diidxa@itistmo.edu.mx </string>
    <!--ESTA APLICACION FUE DESARROLLADA POR ALUMNOS DEL INSTITUTO TECNOLÓGICO DEL ISTMO, AGRADECEMOS AL PROFESOR HOMELINO TOLEDO
        CORTES Y AL PROFESOR AURELIO TOLEDO MATUS POR SU ORIENTACIÓN Y SU AYUDA EN EL DESARROLLO DE ESTE PROYECTO, SI DESEAS PARTICIPAR, INFORMAR DE
        ALGÚN ERROR, SUGERENCIA O COMENTARIO, POR FAVOR ENVÍA UN CORREO A diidxa@itistmo.edu.mx</string>-->

    <!-- TODO: Desing Item Sugerencia -->
    <string name="textsugPalE">Escriba la palabra en español</string>
    <string name="textsugTrad">Escriba la traduccion (OPCIONAL)</string>
    <string name="textsugNom">Escriba su nombre</string>
    <string name="textsugEmail">Escriba su correo (Gmail)</string>
    <string name="textsugBtnC">Cancelar</string>
    <string name="textsugBtnE">Enviar</string>


    <!-- TODO: Titulos Errores -->
    <string name="Serv">Error al Conectar</string>

    <!-- TODO: Textos Errores -->
    <string name="ErrorCons">Error al realizar la consulta</string>
    <string name="CamposVacios">El campo está vacio, verifique los datos</string>
    <string name="ConexionServ">Error al conectar con el servidor, intentelo mas tarde</string>
    <string name="tit_camposv">Error campos vacios</string>
    <string name="camposv">Error, algunos de los campos se encuentran vacios o uno de los datos invalido, verifique los campos</string>
    <string name="tit_info">Información</string>
    <string name="sel_item_bus_es1">Ha seleccionado la palabra</string>
    <string name="sel_item_bus_es2">Ahora dirijase  a la vista DICCIONARIO, para ver sus datos</string>
    <string name="action_menu_sug">Sugerencias</string>
    <string name="SugCampo_V">Campo vacio</string>
    <string name="Sug_inv">Correo invalido</string>
    <string name="sug_desc_es">Tu sugerencia ha sido enviada, ¡gracias!</string>
    <string name="sug_tit_es">Sugerencia enviada</string>



    <!--........... ......................................ZAPOTECO ..............................................................................-->

    <string name="tab_Dic_Za">DIIDXA NAGANA</string>
    <string name="tab_Bus_Za">GUENDARUYUBI</string>
    <string name="title_activity_main_zap">sdfsdf</string>

    <!-- TODO: Fragment Busqueda Zapoteco-->
    <string name="ETTextZapoteco">Bicaa\' diidxa</string>
    <string name="BTNTextZapotecoPlay">Bica Diaga</string>
    <string name="BTNTextZapotecoSearch">Guséendayubi</string>
    <string name="suges_za">Zánda ca tobi de ca ndi\' cuyuubi lu</string>
    <string name="mjs_sugges_za">Diidxa ni cuyuubi lu\' gasti di ni, zaanda gucaalu diidxa di ra gucha\'azi naalu botón di</string>
    <string name="btnsuges_za">Sugerir</string>
    <string name="za_btnaudio">Bicadiaga xhimodo rini\'ni</string>
    <string name="za_btnejaudio">Bicaadiaga xhimodo riquiñeni\'</string>

    <!-- TODO: Desing Item Busqueda -->
    <string name="PlaySonZap">Bica Diaga</string>
    <string name="PlayEjZap">Bica Diaga ti diidxa</string>


    <!-- TODO: Desing Item Acerca de -->
    <string name="Acer_Desc_Za">Aplicación ndi\' gunda gu\' cani ne ca binni sti\' Instituto Tecnológico del Istmo, xquixhepe Homelino Toledo Cortes ne Aurelio Toledo Matus purti\',
        bisienecá ne gucanéca laanu\' ti gunda bi\'ninu dxiiña\' lu proyectu ndi\', saqueca\'  rudinu\' xhusquixhe Ingenieru Jorge Márquez por ti gucanebe lannu ne gupabe confianza lannu lu proyectu ndi\'.
        \n\nPa raca laadxu gucaneu, gabu laanu para bichenu, bicaa ti gui\'dxi\' ra: diidxa@itistmo.edu.mx</string>
    <!--CA BINNI STI\' INSTITUTO TECNOLÓGICO DEL ISTMO BINICA APLICACIÓN NDI, XQUIXHEPE HOMELINO TOLEDO CORTES NE AURELIO TOLEDO MATUS
        PURTI, BISIENECÁ NE GUCANÉCA LAANU\' TI GUNDA BININU DXIIÑA\' DI, PA RACALAADXU GACANEU, GABU\' LAANU\' PARA BICHENU, BICAA TI GUI\'DXI\' RA: diidxa@itistmo.edu.mx</string>*/-->
    <string name="zap_sug_pal">Bicaa\' diidxa</string>
    <string name="zap_sug_trad">Bicaa\' xhimodo rini\'ni</string>
    <string name="zap_sug_nom">Bicaa\' laalu</string>
    <string name="textsugBtnZ">Biseenda</string>
    <string name="textsugBtnCZ">Biree</string>
    <string name="textsugEmailZ">Bicaa\' correu stiu\' (Gmail)</string>
    <string name="textsugNomZ">Bicaa\' laa\'lu</string>
    <string name="textsugTradZ">Bicaa\' xhimodo rini\'ni</string>
    <string name="textsugPalZ">Bicaa\' diidxa</string>

    <string name="SugZaCampo_V">Gasti ni ti diidxa rari\'</string>
    <string name="Sugza_inv">Correu di\' qui iquiñeni\'</string>
    <string name="ConexionServza">Error, gasti\' conexion neca servidor stinnu\'</string>
    <string name="sug_tit_za">Ma biseendanu\' Sugerencia stiu\'</string>
    <string name="sug_desc_za">Sugerencia stiu ma biseendanuni, ¡Xquixhepeli por gacaneu\' lannu!</string>


</resources>