<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DicZaFragment"
    android:orientation="horizontal">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
        android:paddingRight="?android:attr/listPreferredItemPaddingRight"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/entradaPalabraz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:hint="@string/ETTextZapoteco"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="18sp" />
    </android.support.design.widget.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/BTNTextZapotecoSearch"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/boton2"
            android:elevation="2dp"
            android:text="@string/BTNTextZapotecoSearch"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/nosearchZap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:text="@string/suges_za"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="invisible"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/sugMsjZ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:text="@string/mjs_sugges_za"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center_horizontal"
        />

    <Button
        android:id="@+id/sugZapBtn"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="220dp"
        android:background="@drawable/boton2"
        android:text="@string/btnsuges_za"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_marginTop="180dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:visibility="invisible">
        <ListView
            android:layout_marginTop="0dp"
            android:id="@+id/listviewZa"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

</FrameLayout>