<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Suggestions">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:gravity="center_horizontal"
            >

            <LinearLayout
                android:id="@+id/area_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="center_horizontal"
                    android:singleLine="false"
                    android:text="Información de Sugerencia."
                    android:textSize="20dp" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/area_palabra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/area_title"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_db" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp">

                    <EditText
                        android:paddingTop="10dp"
                        android:id="@+id/tve_palabra"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:inputType="textAutoCorrect"
                        android:hint="@string/textsugPalE"/>

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/area_traduccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/area_palabra"
                android:orientation="horizontal"
                android:layout_marginTop="15dp">

                <ImageView
                    android:id="@+id/iv_traduccion"
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_db" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp">

                    <EditText
                        android:id="@+id/ete_traduccion"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:inputType="textAutoCorrect"
                        android:hint="@string/textsugTrad"/>

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/area_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/area_traduccion"
                android:orientation="horizontal"
                android:layout_marginTop="15dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:layout_below="@+id/iv_traduccion"
                    android:layout_column="0"
                    android:layout_gravity="center_vertical"
                    android:layout_row="2"
                    android:src="@drawable/ic_user" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp">

                    <EditText
                        android:id="@+id/etes_nombre"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:inputType="textAutoCorrect"
                       android:hint="@string/textsugNom"/>

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/area_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/area_nombre"
                android:orientation="horizontal"
                android:layout_marginTop="15dp">

                <ImageView
                    android:id="@+id/iv_email"
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:layout_below="@+id/iv_email"
                    android:layout_column="0"
                    android:layout_gravity="center_vertical"
                    android:layout_row="2"
                    android:src="@drawable/ic_email" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp">

                    <EditText
                        android:id="@+id/etes_email"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        android:hint="@string/textsugEmail"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <!-- Bottom Bar -->
            <LinearLayout
                android:layout_below="@id/area_email"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnes_cancelar"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/textsugBtnC"/>

                <Button
                    android:id="@+id/btnes_aceptar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorAccent"
                    android:textColor="@android:color/white"
                    android:text="@string/textsugBtnE"/>
            </LinearLayout>

        </RelativeLayout>



    </ScrollView>
</FrameLayout>