<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Suggestions">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:scrollbars="vertical">

            <LinearLayout
                android:id="@+id/area_titleza"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="center_horizontal"
                    android:singleLine="false"
                    android:text="Información stí sugerencia ca'"
                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/area_palabraza"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/area_titleza"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_db" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp">

                    <EditText
                        android:id="@+id/tve_palabraza"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/textsugPalZ"
                        android:inputType="textAutoCorrect"
                        android:paddingTop="10dp" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/area_traduccionza"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/area_palabraza"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_traduccionza"
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_db" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp">

                    <EditText
                        android:id="@+id/ete_traduccionza"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/textsugTradZ"
                        android:inputType="textAutoCorrect" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/area_nombreza"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/area_traduccionza"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:layout_row="2"
                    android:layout_column="0"
                    android:layout_below="@+id/iv_traduccion"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_user" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp">

                    <EditText
                        android:id="@+id/etes_nombreza"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/textsugNomZ"
                        android:inputType="textAutoCorrect" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/area_emailza"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/area_nombreza"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_emailza"
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:layout_row="2"
                    android:layout_column="0"
                    android:layout_below="@+id/iv_email"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_email" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp">

                    <EditText
                        android:id="@+id/etes_emailza"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/textsugEmailZ"
                        android:inputType="textEmailAddress"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <!-- Bottom Bar -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_below="@id/area_emailza"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnes_cancelarza"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/textsugBtnCZ" />

                <Button
                    android:id="@+id/btnes_aceptarza"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorAccent"
                    android:text="@string/textsugBtnZ"
                    android:textColor="@android:color/white" />
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
</FrameLayout>